--- a/index.html
+++ b/index.html
@@ -4,9 +4,83 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>News Portal</title>
+		<title>Daily News</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous"
+		/>
 	</head>
 	<body>
-		<script src=""></script>
+		<header class="container">
+			<nav class="navbar bg-light mb-3">
+				<div class="container-fluid">
+					<a class="navbar-brand">Daily News</a>
+					<form class="d-flex" role="search">
+						<a class="nav-link me-4 pt-2" href="#">Home</a>
+						<a class="nav-link me-4 pt-2" href="#">News</a>
+						<img class="mt-2" src="./images/profie-picture.jpg" style="max-width: 30px; height: 30px; border-radius: 50%;" alt="">
+						</button>
+					</form>
+				</div>
+			</nav>
+			<div id="category-div" class="d-flex justify-content-center"></div>
+		</header>
+		<main>
+			<section>
+				<div id="news-card" class="card mb-3"></div>
+				<div id="no-found-message" class="mt-5 d-none">
+					<h3 class="text-warning text-center">
+						No News Found, Please Try Again
+					</h3>
+				</div>
+			</section>
+			<section>
+				<!-- Modal -->
+				<div
+					class="modal fade"
+					id="newsDetailslModal"
+					tabindex="-1"
+					aria-labelledby="newsDetailsModalLabel"
+					aria-hidden="true"
+				>
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h1 class="modal-title fs-5" id="newsDetailsModalLabel"></h1>
+								<button
+									type="button"
+									class="btn-close"
+									data-bs-dismiss="modal"
+									aria-label="Close"
+								></button>
+							</div>
+							<div id="news-details-body" class="modal-body"></div>
+							<div class="modal-footer">
+								<button
+									type="button"
+									class="btn btn-secondary"
+									data-bs-dismiss="modal"
+								>
+									Close
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+		<script src="./js/app.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
+<!-- <ul class="nav justify-content-center">
+	<li class="nav-item">
+		<a class="nav-link" href="#">Link</a>
+	</li>
+</ul> -->
