--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 		/>
 	</head>
 	<body>
+		<!-- Navigation Bar -->
 		<header class="container">
 			<nav class="navbar bg-light mb-3">
 				<div class="container-fluid">
-					<a class="navbar-brand">Daily News</a>
+					<a class="navbar-brand fs-2">Daily News</a>
 					<form class="d-flex" role="search">
 						<a class="nav-link me-4 pt-2" href="#">Home</a>
 						<a class="nav-link me-4 pt-2" href="#">News</a>
@@ -25,19 +26,36 @@
 					</form>
 				</div>
 			</nav>
-			<div id="category-div" class="d-flex justify-content-center"></div>
+			<!-- New Categories List  -->
+			<div id="category-div" class="d-flex justify-content-lg-center flex-wrap"></div>
 		</header>
 		<main>
-			<section>
-				<div id="news-card" class="card mb-3"></div>
+			<!-- New Showing Section -->
+			<section class="container">
+				<!-- New Count -->
+				<div id="news-count" class="mt-3 ps-5"></div>
+				<!-- News Card -->
+				<div id="news-card" class="mb-3"></div>
+				<!-- No News Found Text -->
 				<div id="no-found-message" class="mt-5 d-none">
 					<h3 class="text-warning text-center">
 						No News Found, Please Try Again
 					</h3>
 				</div>
 			</section>
+			<!-- Spinner -->
+			<section id="loader" class="d-none">
+				<div
+					style="height: 500px"
+					class="d-flex justify-content-center align-items-center"
+				>
+					<div class="spinner-border text-success" role="status">
+						<span class="visually-hidden">Loading...</span>
+					</div>
+				</div>
+			</section>
+			<!-- Modal Section -->
 			<section>
-				<!-- Modal -->
 				<div
 					class="modal fade"
 					id="newsDetailslModal"
@@ -71,16 +89,11 @@
 				</div>
 			</section>
 		</main>
-		<script src="./js/app.js"></script>
 		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-			crossorigin="anonymous"
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"
 		></script>
+		<script src="./js/app.js"></script>
 	</body>
 </html>
-<!-- <ul class="nav justify-content-center">
-	<li class="nav-item">
-		<a class="nav-link" href="#">Link</a>
-	</li>
-</ul> -->
