adding blog question

--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
 						No News Found, Please Try Again
 					</h3>
 				</div>
+				<div id="blog-question" class="mt-5 d-none">
+					<h3 class="">
+						Question-1: What's the diffrence between arrow function & regular function?
+					</h3>
+					<p></p>
+					<h3 class="">
+						Question-1: What's the diffrence between arrow function & regular function?
+					</h3>
+					<p></p>
+					<h3 class="">
+						Question-1: What's the diffrence between arrow function & regular function?
+					</h3>
+					<p></p>
+					<h3 class="">
+						Question-1: What's the diffrence between arrow function & regular function?
+					</h3>
+					<p></p>
+				</div>
 			</section>
 			<!-- Spinner -->
 			<section id="loader" class="d-none">
