complete question answer

--- a/index.html
+++ b/index.html
@@ -57,13 +57,16 @@
 					<p><b>4. Using new keyword:</b> egular functions created using function declarations or expressions are constructible and callable. Since regular functions are constructible, they can be called using the new keyword. However, the arrow functions are only callable and not constructible, i.e arrow functions can never be used as constructor functions. Hence, they can never be invoked with the new keyword.</p>
 					<p><b>5. No duplicate named parameters: </b>Arrow functions can never have duplicate named parameters, whether in strict or non-strict mode.</p>
 					<h3 class="">
-						Question-1: What's the diffrence between arrow function & regular function?
+						Question-3: Why we use template string in javascript?
 					</h3>
-					<p></p>
+					<p>Template strings are a powerful feature of modern JavaScript released in ES6. It lets us insert/interpolate variables and expressions into strings without needing to concatenate like in older versions of JavaScript. It allows us to create strings that are complex and contain dynamic elements.</p>
 					<h3 class="">
-						Question-1: What's the diffrence between arrow function & regular function?
+						Question-4: Why and when to use forEach, map, filter, and find in JavaScript.?
 					</h3>
-					<p></p>
+					<p><b>forEach: </b>.forEach() is great you need to execute a function for each individual element in an array. Good practice is that you should use .forEach() when you can not use other array methods to accomplish your goal. I know this may sound vague, but .forEach() is a generic tool… only use it when you can not use a more specialized tool.</p>
+					<p><b>Map: </b>.map() when you want to transform elements in an array.</p>
+					<p><b>Filter: </b>.filter() when you want to select a subset of multiple elements from an array.</p>
+					<p><b>Find: </b>.find() When you want to select a single element from an array.</p>
 				</div>
 			</section>
 			<!-- Spinner -->
