--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<form class="d-flex" role="search">
 						<a class="nav-link me-4 pt-2" href="#">Home</a>
 						<a class="nav-link me-4 pt-2" href="#">News</a>
+						<a id="question-answer" class="nav-link me-4 pt-2" href="#">Blog</a>
 						<img class="mt-2" src="./images/profie-picture.jpg" style="max-width: 30px; height: 30px; border-radius: 50%;" alt="">
 						</button>
 					</form>
