adding and deleteing some code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<!-- Navigation Bar -->
 		<header class="container">
-			<nav class="navbar bg-light mb-3">
+			<nav class="navbar bg-light mb-1">
 				<div class="container-fluid">
 					<a class="navbar-brand fs-2">Daily News</a>
 					<form class="d-flex" role="search">
@@ -30,7 +30,7 @@
 			<!-- New Categories List  -->
 			<div id="category-div" class="d-flex justify-content-lg-center flex-wrap"></div>
 		</header>
-		<main>
+		<main style="height:75vh">
 			<!-- New Showing Section -->
 			<section class="container">
 				<!-- New Count -->
@@ -43,6 +43,7 @@
 						No News Found, Please Try Again
 					</h3>
 				</div>
+				<!-- Assignment Question And Answer Section -->
 				<div id="blog-question" class="mt-5 d-none">
 					<h3 class="">
 						Question-1: What is difference between var, let and const?
