--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header class="container">
 			<nav class="navbar bg-light mb-1">
 				<div class="container-fluid">
-					<a class="navbar-brand fs-2">Daily News</a>
+					<h3 class="navbar-brand fs-2"><span style="color:coral">Daily</span> News</h3>
 					<form class="d-flex" role="search">
 						<a class="nav-link me-4 pt-2" href="#">Home</a>
 						<a class="nav-link me-4 pt-2" href="#">News</a>
@@ -33,10 +33,12 @@
 		<main style="height:75vh">
 			<!-- New Showing Section -->
 			<section class="container">
-				<!-- New Count -->
+				<div id="news-section">
+					<!-- New Count -->
 				<div id="news-count" class="mt-3 ps-5"></div>
 				<!-- News Card -->
 				<div id="news-card" class="mb-3"></div>
+				</div>
 				<!-- No News Found Text -->
 				<div id="no-found-message" class="mt-5 d-none">
 					<h3 class="text-warning text-center">
